--- a/src/app/client/src/app/modules/shared-feature/components/profile-framework-popup/profile-framework-popup.component.html
+++ b/src/app/client/src/app/modules/shared-feature/components/profile-framework-popup/profile-framework-popup.component.html
@@ -22,7 +22,7 @@
           <label>{{field.label}}</label>
           <div class="sb-field">
             <sui-select id={{field.code}} [isSearchable]="false" class="selection" [(ngModel)]="selectedOption[field.code]"
-              [options]="options" (ngModelChange)="handleFieldChange($event, field)" name={{field.code}}>
+              [options]="options" name={{field.code}}>
               <sui-select-option *ngFor="let option of field.range" [value]="option.name"></sui-select-option>
             </sui-select>
           </div>
@@ -31,7 +31,7 @@
           <label>{{field.label}}</label>
           <div class="sb-field">
             <sui-multi-select id={{field.code}} [isSearchable]="false" class="selection" [(ngModel)]="selectedOption[field.code]"
-              [options]="options" (ngModelChange)="handleFieldChange($event, field)" name={{field.code}} #multiSelect>
+              [options]="options" name={{field.code}} #multiSelect>
               <sui-select-option *ngFor="let option of field.range" [value]="option.name"></sui-select-option>
             </sui-multi-select>
           </div>
@@ -47,7 +47,6 @@
       appTelemetryInteract [telemetryInteractObject]="telemetryInteractObject"
       [telemetryInteractEdata]="submitInteractEdata"
       class="sb-btn sb-btn-normal sb-btn-primary" 
-      [disabled]="!showButton" 
       (click)="onSubmitForm()"
     >
       {{buttonLabel}}
